@@ -74,6 +74,7 @@ static int impl_side_get(lua_State *L)
 	return_tstring_attrib("faction_name", t.faction_name());
 	return_string_attrib("color", t.color());
 	return_cstring_attrib("controller", t.controller().to_string().c_str());
+	return_bool_attrib("is_local", t.is_local());
 	return_string_attrib("defeat_condition", t.defeat_condition().to_string());
 	return_string_attrib("share_vision", t.share_vision().to_string());
 	return_float_attrib("carryover_bonus", t.carryover_bonus());
